--- a/src/TagScanner/res/values/strings.xml
+++ b/src/TagScanner/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="connect">Connect…</string>
     <string name="version">version</string>
     <string name="add">Add</string>
+    <string name="open">Open</string>
 
 </resources>
