--- a/src/TagScanner/res/values/strings.xml
+++ b/src/TagScanner/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="version">version</string>
     <string name="add">Add</string>
     <string name="open">Open</string>
+    <string name="delete">Delete</string>
 
 </resources>
