Adds first pass at contact integration

--- a/src/TagScanner/res/values/strings.xml
+++ b/src/TagScanner/res/values/strings.xml
@@ -21,4 +21,5 @@
         <item >6</item>
         <item >7</item>
     </string-array>
+        <string name="associate_contact">Associate Contact</string>
 </resources>
